# genetic_algorithm

./: .gitignore  Cargo.toml
analysis/: greedy.py  plot.py  run.sh
src/: consts.rs  generate.rs  individual.rs  main.rs  population.rs  population_config.rs  scenario.rs  train.rs
src/population/: config.rs  individual.rs  mod.rs  random_vec.rs  random_vector.rs
