[package]
name = "genet"
version = "0.1.0"
authors = ["kaaboaye <kaaboaye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt='0.3.11'
rand = "0.7.3"
nalgebra = "0.20"
crossbeam = '0.7'
crossbeam-utils = '0.7'
rayon = '1.3'